# minimap2

./: format.c  index.c  meson.build  meson_options.txt  minimap.h
